--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   intl: ^0.19.0
   flutter_local_notifications: ^16.3.2
   timezone: ^0.9.2
+  image_picker: ^1.0.7
 
   # Firebase
   firebase_core: ^2.27.1
