--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,13 +47,15 @@ dependencies:
   flutter_local_notifications: ^16.3.2
   timezone: ^0.9.2
   image_picker: ^1.0.7
-
   # Firebase
   firebase_core: ^2.27.1
   firebase_auth: ^4.17.9
   cloud_firestore: ^4.15.9
   firebase_storage: ^11.6.10
   firebase_messaging: ^14.7.20
+
+  # UI Components
+  mobkit_dashed_border: ^0.0.5
 
 dev_dependencies:
   flutter_test:
