--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,10 @@ dependencies:
   qr_code_scanner: ^1.0.0
   camera: ^0.11.0+1
   path_provider: ^2.1.2
-  intl: ^0.19.0
+  intl: ^0.20.2
+  flutter_localizations:
+    sdk: flutter
+
   flutter_local_notifications: ^16.1.3
   timezone: ^0.9.2
   image_picker: ^1.0.7
@@ -80,6 +83,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+# Configuration pour la génération des traductions
+  generate: true
+  
+  # To add assets to your application, add an assets section, like this:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
