--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,8 +1,7 @@
 arb-dir: lib/l10n
 template-arb-file: app_en.arb
-ame: app_localizations
 output-class: AppLocalizations
-output-dir: gen_l10n
+output-dir: lib/l10n
 preferred-supported-locales:
   - en
   - fr
