--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,19 +49,21 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  flutter_local_notifications: ^16.1.3
-  timezone: ^0.9.2
-  image_picker: ^1.0.7
-  # Firebase
+  # Firebase dependencies
   firebase_core: ^2.27.1
   firebase_auth: ^4.17.9
   cloud_firestore: ^4.15.9
-  google_sign_in: ^6.2.1
   firebase_storage: ^11.6.10
   firebase_messaging: ^14.7.20
+  firebase_analytics: ^10.7.2
+  firebase_crashlytics: ^3.3.7
+  firebase_performance: ^0.9.1+14
+  google_sign_in: ^6.2.1
+  connectivity_plus: ^5.0.2
 
-  # UI Components
-  mobkit_dashed_border: ^0.0.5
+  flutter_local_notifications: ^16.1.3
+  timezone: ^0.9.2
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
