--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
   json_annotation: ^4.9.0
+  freezed_annotation: ^2.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.  cupertino_icons: ^1.0.8
@@ -75,6 +76,7 @@ dev_dependencies:
   intl: ^0.20.2
   flutter_localizations:
     sdk: flutter
+  freezed: ^2.3.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
